# mynote

./: .gitignore  LICENSE  README.md  build-run.sh  install.sh  make-dist-linux.sh  makefile  meson.build  mynote.desktop  resources.gresources.xml
include/: aboutwindow.hpp  application.hpp  confirmexitwindow.hpp  fileutils.hpp  mainwindow.hpp  openwindow.hpp  savewindow.hpp
res/: about_dialog_content.glade  about_window_layout.glade  confirm_exit_dialog_layout.glade  mainwindow_layout.glade  makefile  meson.build  open_window_layout.glade  resources.gresources.xml  save_window_layout.glade
src/: aboutwindow.cpp  application.cpp  confirmexitwindow.cpp  fileutils.cpp  main.cpp  mainwindow.cpp  makefile  meson.build  openwindow.cpp  savewindow.cpp
