# This belongs to MyNote project, see https://github.com/pedroter7/mynote

mynote_sources = [
    'main.cpp', 
    'application.cpp', 
    'mainwindow.cpp', 
    'confirmexitwindow.cpp', 
    'fileutils.cpp']

mynote_sources += resources

executable('mynote', mynote_sources, include_directories : incdir, dependencies : gtkmm_dep, install : true)
